# ova-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01-quickstart.py  02-tts_voices.py  03-multilingual_tts.py  04-streaming_playback.py  05-batch_tts.py  06-text_to_dialogue.py  07-chat_conversation.py  08-settings_and_info.py  09-transcribe_audio.py  10-interactive_chat.py  11-error_handling.py  12-duplex_conversation.py  README.md
src/ova_sdk/: __init__.py  _asr.py  _audio.py  _base.py  _chat.py  _client.py  _dialogue.py  _duplex.py  _errors.py  _models.py  _settings.py  _streaming.py  _tts.py
tests/: test_base.py  test_chat.py  test_errors.py  test_integration.py  test_models.py  test_streaming.py
