[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ova-sdk"
version = "0.2.0"
description = "Python SDK for the OVA server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Kedara Studios", email = "dani@kedarastudios.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
    "numpy>=1.24",
    "sounddevice>=0.4",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/rekuenkdr/ova-python-sdk"
Repository = "https://github.com/rekuenkdr/ova-python-sdk"
Issues = "https://github.com/rekuenkdr/ova-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ova_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires running OVA server"]
